# cos-alerter

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  SECURITY.md  cos-alerter-default.toml  cos-alerter-default.yaml  cos-alerter.sample.yaml  daemon.py  pyproject.toml  requirements.txt  rockcraft.yaml  run  server.py  setup.py  tox.ini
.github/: .jira_sync_config.yaml
.github/workflows/: build-rock.yaml  issues.yaml  promote-snap.yaml  pull-request.yaml  push-main.yaml  release-snap.yaml  rock-build.yaml
alerter/: __init__.py  server.py
cos_alerter/: alerter.py  config-defaults.yaml  daemon.py  logging.py  server.py
cos_alerter/static/: vanilla-framework-version-3.14.0.min.css
cos_alerter/templates/: base.html  client-details.html  dashboard.html
k8s-local-test/: deploy.yaml  svc.yaml
snap/: snapcraft.yaml
tests/: conftest.py  helpers.py  test_alerter.py  test_daemon.py  test_server.py
