[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cos-alerter"
version = "0.1.0"
authors = [
  { name="Dylan Stephano-Shachter", email="dylan.stephano-shachter@canonical.com" }
]
description = "A watcher for Alertmanager"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Topic :: System :: Monitoring",
  "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
  "apprise~=1.3",
  "durationpy",
  "flask~=2.2",
  "waitress~=2.1",
  "pyyaml~=6.0"
]

[project.urls]
Homepage = "https://github.com/canonical/cos-alerter"
"Bug Tracker" = "https://github.com/canonical/cos-alerter/issues"

[project.scripts]
cos-alerter = "cos_alerter.daemon:main"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 99
max-doc-length = 99
exclude = [".git", "__pycache__", ".tox", "build", "dist", "*.egg_info", "venv"]
select = ["E", "W", "F", "C", "N", "R", "D", "H"]
# Ignore W503, E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["W503", "E501", "D107"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
per-file-ignores = ["tests/*:D100,D101,D102,D103"]
docstring-convention = "google"
# Check for properly formatted copyright header in each file
copyright-check = "True"
copyright-author = "Canonical Ltd."
copyright-regexp = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+%(author)s"

[tool.pyright]
include = ["cos_alerter"]
pythonVersion = "3.8"
pythonPlatform = "Linux"

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
